--- a/lib/ham_varzeshi_web/templates/gym/index.html.eex
+++ b/lib/ham_varzeshi_web/templates/gym/index.html.eex
@@ -13,7 +13,7 @@
   <tbody>
 <%= for gym <- @gyms do %>
     <tr>
-      <td><img class="object-scale-down h-20 w-20" src="<%= HamVarzeshi.Avatar.url({gym.avatar , gym}) %>" /></td>
+      <td><img class="object-contain  w-28 h-28" src="<%= HamVarzeshi.Avatar.url({gym.avatar , gym}) %>" /></td>
       <td><%= gym.name %></td>
       <td><%= gym.description %></td>
 
