--- a/lib/ham_varzeshi_web/templates/gym/index.html.eex
+++ b/lib/ham_varzeshi_web/templates/gym/index.html.eex
@@ -17,11 +17,15 @@
       <td><%= gym.name %></td>
       <td><%= gym.description %></td>
 
+
       <td>
         <span><%= link "Show", to: Routes.gym_path(@conn, :show, gym) %></span>
+        <%= if @conn.assigns.user && @conn.assigns.user.id == gym.user_id do %>
         <span><%= link "Edit", to: Routes.gym_path(@conn, :edit, gym) %></span>
         <span><%= link "Delete", to: Routes.gym_path(@conn, :delete, gym), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
+      <% end %>
+
     </tr>
 <% end %>
   </tbody>
