--- a/lib/ham_varzeshi_web/templates/layout/app.html.eex
+++ b/lib/ham_varzeshi_web/templates/layout/app.html.eex
@@ -5,33 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>HamVarzeshi · Phoenix Framework</title>
-    <!--<link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/> -->
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
 
-  <body>
+  <body class="bg-gray-200">
 
+    <div class="flex items-center justify-between bg-gray-700 p-10">
 
-    <nav class="flex items-center justify-between flex-wrap bg-purple-400 p-10">
-      <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <svg class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg"><path d="M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z"/></svg>
-       <span class="font-semibold text-xl tracking-tight"> HamVarzeshi </span>
+      <div class="">
+        <svg class="mr-2" width="54" height="54" xmlns="http://www.w3.org/2000/svg"><path d="M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z"/></svg>
+        <div class="font-semibold text-4xl text-green-300 inline "> HamVarzeshi </div>
       </div>
 
-      <ul>
+      <div>
         <%= if @conn.assigns[:user] do %>
-          <li>
-          <%= link "Sing out", to: Routes.auth_path(@conn, :signout) %>
-          </li>
+          <div>
+          <%= button("Sing out", to: Routes.auth_path(@conn, :signout),method: :get, class: "bg-green-300 border-2 border-gray-700 rounded-tr-full text-black pd-4")  %>
+          </div>
+          <div>
+          reserved sessions
+          </div>
         <% else %>
-          <li>
-           <%= link "Sing in with google", to: Routes.auth_path(@conn, :request , "google") %>
-          </li>
+          <div>
+           <%= button("Sing in with google", to: Routes.auth_path(@conn, :request , "google"),method: :get, class: "bg-green-300 border-2 border-gray-700 rounded-tr-full text-black pd-4")  %>
+          </div>
         <% end %>
-      </ul>
+      </div>
 
-    </nav>
+    </div>
 
 
     <main role="main" class="container">
