--- a/lib/ham_varzeshi_web/templates/gym/index.html.eex
+++ b/lib/ham_varzeshi_web/templates/gym/index.html.eex
@@ -1,35 +1,34 @@
-<h1>Listing Gyms</h1>
+<div class="text-8xl m-6">Listing Gyms</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Avatar</th>
-      <th>Description</th>
 
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
 <%= for gym <- @gyms do %>
-    <tr>
-      <td><img class="object-contain  w-28 h-28" src="<%= HamVarzeshi.Avatar.url({gym.avatar , gym}) %>" /></td>
-      <td><%= gym.name %></td>
-      <td><%= gym.description %></td>
+
+    <div class=" col bg-gray-100 border-2 border-white m-2 p-2 rounded-xl">
+      <div class=" flex justify-between p-4 m-4 ">
+
+        <img class="rounded-full w-32 h-32" src="<%= HamVarzeshi.Avatar.url({gym.avatar , gym}) %>" />
+        <div class="text-4xl text-b">
+          <%= gym.name %>
+
+          <div class="text-lg"><%= gym.description %></div>
+
+        </div>
 
 
-      <td>
-        <span><%= link "Show", to: Routes.gym_path(@conn, :show, gym) %></span>
-        <span><%= link "Reserve", to: Routes.user_gym_path(@conn, :reserve, gym) %></span>
+        <div class=" text-base px-8" >
         <%= if @conn.assigns.user && @conn.assigns.user.id == gym.user_id do %>
-        <span><%= link "Edit", to: Routes.gym_path(@conn, :edit, gym) %></span>
-        <span><%= link "Delete", to: Routes.gym_path(@conn, :delete, gym), method: :delete, data: [confirm: "Are you sure?"] %></span>
-      </td>
-      <% end %>
+          <%= link "Edit", to: Routes.gym_path(@conn, :edit, gym) %>
+          <%= link "Delete", to: Routes.gym_path(@conn, :delete, gym), method: :delete, data: [confirm: "Are you sure?"] %>
+        <% end %>
+        <%= link "Show", to: Routes.gym_path(@conn, :show, gym) %>
+        <%= link "Reserve", to: Routes.user_gym_path(@conn, :reserve, gym) %>
+        </div>
 
-    </tr>
+
+      </div>
+    </div>
+
 <% end %>
-  </tbody>
-</table>
+
 
 <span><%= link "New Gym", to: Routes.gym_path(@conn, :new) %></span>
