--- a/lib/ham_varzeshi_web/templates/gym/new_form.html.eex
+++ b/lib/ham_varzeshi_web/templates/gym/new_form.html.eex
@@ -1,3 +1,4 @@
+
 <%= form_for @changeset, @action, fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
@@ -6,19 +7,26 @@
   <% end %>
 
 
-  <div>
-  <%= label f, :name %>
-  <%= text_input f, :name %>
+  <%= label f, :name , class: "block text-gray-500 font-bold md:text-left mb-1 md:mb-0 pr-4" %>
+  <%= text_input f, :name , class: "appearance-none border border-red-500" %>
   <%= error_tag f, :name %>
-  </div>
+
 
   <div>
-  <%= label f, :description %>
+  <%= label f, :description ,class: "block text-gray-500 font-bold md:text-left mb-1 md:mb-0 pr-4" %>
   <%= text_input f, :description %>
   <%= error_tag f, :description %>
   </div>
 
-  <div>
-    <%= submit "Save" %>
+   <div>
+  <%= label f, :cost ,class: "block text-gray-500 font-bold md:text-left mb-1 md:mb-0 pr-4" %>
+  <%= number_input f, :cost,  [{:value, "10"}] %>
+  <%= error_tag f, :cost %>
   </div>
+
+  <div>
+    <%= submit "Save" ,  class: "text-base bg-green-300 border-2 border-gray-700 rounded-lg text-black px-6" %>
+  </div>
+
+
 <% end %>
